--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/shikhardb/cryptolottery/issues"
   },
-  "homepage": "https://github.com/shikhardb/cryptolottery#readme"
+  "homepage": "https://github.com/shikhardb/cryptolottery#readme",
+  "dependencies": {
+    "solc": "^0.4.25"
+  }
 }
