--- a/kickstarter-crypto/package.json
+++ b/kickstarter-crypto/package.json
@@ -4,7 +4,7 @@
   "description": "Kickstarter campaign using Blockchain",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "Shikhar Dubey",
   "license": "ISC",
