--- a/kickstarter-crypto/package.json
+++ b/kickstarter-crypto/package.json
@@ -13,6 +13,7 @@
     "ganache-cli": "^6.3.0",
     "mocha": "^5.2.0",
     "solc": "^0.4.25",
+    "truffle-hdwallet-provider": "^1.0.3",
     "web3": "^1.0.0-beta.36"
   }
 }
