--- a/kickstarter-crypto/package.json
+++ b/kickstarter-crypto/package.json
@@ -4,7 +4,8 @@
   "description": "Kickstarter campaign using Blockchain",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "dev": "next dev"
   },
   "author": "Shikhar Dubey",
   "license": "ISC",
@@ -12,6 +13,9 @@
     "fs-extra": "^7.0.1",
     "ganache-cli": "^6.3.0",
     "mocha": "^5.2.0",
+    "next": "^4.1.4",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
     "solc": "^0.4.25",
     "truffle-hdwallet-provider": "^1.0.3",
     "web3": "^1.0.0-beta.36"
