--- a/kickstarter-crypto/package.json
+++ b/kickstarter-crypto/package.json
@@ -16,6 +16,8 @@
     "next": "^4.1.4",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.85.0",
     "solc": "^0.4.25",
     "truffle-hdwallet-provider": "^1.0.3",
     "web3": "^1.0.0-beta.36"
