--- a/kickstarter-crypto/package.json
+++ b/kickstarter-crypto/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "dev": "next dev"
+    "dev": "node server.js"
   },
   "author": "Shikhar Dubey",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "ganache-cli": "^6.3.0",
     "mocha": "^5.2.0",
     "next": "^4.1.4",
+    "next-routes": "^1.4.2",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "semantic-ui-css": "^2.4.1",
