--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "mocha",
     "dev": "node server.js",
-    "now-build": "next build"
+    "build": "next build",
+    "start": "next start -p $PORT",
+    "heroku-postbuild": "next build"
   },
   "author": "Shikhar Dubey",
   "license": "ISC",
